add Skills section, edit media queries

--- a/index.html
+++ b/index.html
@@ -47,55 +47,79 @@
       <h1 id="about-title">About Me</h1>
 
       <div id="about-paragraphs" style="display: none">
-        <img id="photo" src="https://i.imgur.com/qhXgZFB.png" alt="" />
+        <div class="container">
+          <div class="container-1">
+            <img id="photo" src="https://i.imgur.com/qhXgZFB.png" alt="" />
+          </div>
+          <div class="container-2">
+            <div id="about-paragraphs-container">
+              <p>
+                I am a full-stack software engineer in New York City, born and
+                raised in Texas. I love using the MERN stack (MongoDB, Express,
+                React.js, Node.js) to build projects, and have also built
+                full-stack applications using Vue.js, PostgreSQL, and Django.
+              </p>
+              <br />
+              <p>
+                I have a background in editing and writing, which I have
+                levaraged to create precise and clean code. Also, I have a
+                background in performing and writing (my work can be seen
+                <a
+                  id="personal-site"
+                  href="https://www.therealmichaelnewman.com/"
+                  target="_blank"
+                  >here</a
+                >). I've taught and coached improv, which has helped me
+                communicate effectively when working on teams. I love building
+                applications on topics that have meaning to me, like civics and
+                literature. I'm excited to continue learning about the
+                constantly changing tech landscape.
+              </p>
+              <br />
+              <p>
+                I look forward to using my skills to develop software and create
+                applications to benefit companies and institutions. I hope you
+                enjoy the projects I made. Click on the icons below to check out
+                more of my projects on GitHub, and to reach me via LinkedIn or
+                through the contact information on my resume.
+              </p>
+            </div>
 
-        <div id="about-paragraphs-container">
-          <p>
-            I am a full-stack software engineer in New York City, born and
-            raised in Texas. I love using the MERN stack (MongoDB, Express,
-            React.js, Node.js) to build projects, and have also built full-stack
-            applications using Vue.js, PostgreSQL, and Django.
-          </p>
-          <br />
-          <p>
-            I have a background in editing and writing, which I have levaraged
-            to create precise and clean code. I love building applications on
-            topics that have meaning to me, like civics and literature. I'm
-            excited to continue learning about the constantly changing tech
-            landscape.
-          </p>
-          <br />
-          <p>
-            I look forward to using my skills to develop software and create
-            applications to benefit companies and institutions. I hope you enjoy
-            the projects I made. Click on the icons below to check out more of
-            my projects on GitHub, and to reach me via LinkedIn or through the
-            contact information on my resume.
-          </p>
+            <br />
+
+            <span class="icons">
+              <a href="https://github.com/therealmikenew" target="_blank">
+                <img class="icon-link" src="assets/images/github.png" alt=""
+              /></a>
+              <a
+                href="https://www.linkedin.com/in/therealmichaelnewman/"
+                target="_blank"
+              >
+                <img class="icon-link" src="assets/images/LI-In-Bug.png" alt=""
+              /></a>
+              <a
+                href="https://docs.google.com/document/d/1ZTxtEj8I1d0g9trV6xLB_idF2VxdD80H2qiwwVZhrHA/edit?usp=sharing"
+                target="_blank"
+              >
+                <img
+                  class="icon-link"
+                  src="assets/images/Google_Drive_logo.png"
+                  alt=""
+              /></a>
+            </span>
+          </div>
         </div>
+      </div>
+    </div>
 
-        <br />
-
-        <span class="icons">
-          <a href="https://github.com/therealmikenew" target="_blank">
-            <img class="icon-link" src="assets/images/github.png" alt=""
-          /></a>
-          <a
-            href="https://www.linkedin.com/in/therealmichaelnewman/"
-            target="_blank"
-          >
-            <img class="icon-link" src="assets/images/LI-In-Bug.png" alt=""
-          /></a>
-          <a
-            href="https://docs.google.com/document/d/1ZTxtEj8I1d0g9trV6xLB_idF2VxdD80H2qiwwVZhrHA/edit?usp=sharing"
-            target="_blank"
-          >
-            <img
-              class="icon-link"
-              src="assets/images/Google_Drive_logo.png"
-              alt=""
-          /></a>
-        </span>
+    <div id="skills-container">
+      <h1 id="skills-title">Skills and Technologies</h1>
+      <div id="skills-paragraphs" style="display: none">
+        <p id="skills-paragraph">
+          HTML5 | CSS3 | JavaScript | Python | React.js | Vue.js | Redux |
+          Django | Node.js | Express.js | MongoDB | Mongoose | PostgreSQL|
+          Sequelize | Git | GitHub | Axios | Heroku | Insomnia | MongoDB Compass
+        </p>
       </div>
     </div>
 
