--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
       <div id="about-paragraphs" style="display: none">
         <div class="container">
           <div class="container-1">
-            <img id="photo" src="https://i.imgur.com/qhXgZFB.png" alt="" />
+            <img
+              id="photo"
+              src="https://i.imgur.com/qhXgZFB.png"
+              alt="mike newman's photo"
+            />
           </div>
           <div class="container-2">
             <div id="about-paragraphs-container">
@@ -89,13 +93,19 @@
 
             <span class="icons">
               <a href="https://github.com/therealmikenew" target="_blank">
-                <img class="icon-link" src="assets/images/github.png" alt=""
+                <img
+                  class="icon-link"
+                  src="assets/images/github.png"
+                  alt="github"
               /></a>
               <a
                 href="https://www.linkedin.com/in/therealmichaelnewman/"
                 target="_blank"
               >
-                <img class="icon-link" src="assets/images/LI-In-Bug.png" alt=""
+                <img
+                  class="icon-link"
+                  src="assets/images/LI-In-Bug.png"
+                  alt="linkedin"
               /></a>
               <a
                 href="https://docs.google.com/document/d/1ZTxtEj8I1d0g9trV6xLB_idF2VxdD80H2qiwwVZhrHA/edit?usp=sharing"
@@ -104,7 +114,7 @@
                 <img
                   class="icon-link"
                   src="assets/images/Google_Drive_logo.png"
-                  alt=""
+                  alt="google drive"
               /></a>
             </span>
           </div>
@@ -135,7 +145,7 @@
               id="first-project"
               class="project-image"
               src="assets/images/MySoCalled.png"
-              alt=""
+              alt="MySoCalled.png"
             />
 
             <div id="first-project-text" style="display: none">
@@ -168,15 +178,19 @@
               <div class="tech-icons-container">
                 <div class="tech-icons-container-1">
                   <h4>Technologies:</h4>
-                  <img class="icon" src="assets/images/vue.png" alt="" /><img
+                  <img class="icon" src="assets/images/vue.png" alt="vue" /><img
                     class="icon"
                     src="assets/images/sequelize.png"
-                    alt=""
+                    alt="sequelize"
                   /><img
                     class="icon"
                     src="assets/images/postgresql.png"
                     alt=""
-                  /><img class="icon" src="assets/images/django.png" alt="" />
+                  /><img
+                    class="icon"
+                    src="assets/images/django.png"
+                    alt="postgresql"
+                  />
                   <img
                     class="icon"
                     src="assets/images/vuesax-Imagotipo black vertical.png"
@@ -193,7 +207,7 @@
                       ><img
                         class="icon-link"
                         src="assets/images/Netlify-Logo.wine.png"
-                        alt=""
+                        alt="netlify"
                     /></a>
                   </div>
 
@@ -205,7 +219,7 @@
                       ><img
                         class="icon-link"
                         src="assets/images/github.png"
-                        alt=""
+                        alt="github"
                     /></a>
                   </div>
                 </div>
@@ -236,7 +250,11 @@
               <div class="tech-icons-container">
                 <div class="tech-icons-container-1">
                   <h4>Technologies:</h4>
-                  <img class="icon" src="assets/images/mongodb.png" alt="" />
+                  <img
+                    class="icon"
+                    src="assets/images/mongodb.png"
+                    alt="mongodb"
+                  />
                   <img
                     class="icon"
                     src="assets/images/mongoose.png"
@@ -245,8 +263,12 @@
                     class="icon"
                     src="assets/images/express.png"
                     alt=""
-                  /><img class="icon" src="assets/images/react.png" alt="" />
-                  <img class="icon" src="assets/images/node.png" alt="" />
+                  /><img
+                    class="icon"
+                    src="assets/images/react.png"
+                    alt="react"
+                  />
+                  <img class="icon" src="assets/images/node.png" alt="node" />
                 </div>
                 <div class="tech-icons-container-2">
                   <div class="site-link">
@@ -257,7 +279,7 @@
                       ><img
                         class="icon-link"
                         src="assets/images/heroku.png"
-                        alt=""
+                        alt="heroku"
                     /></a>
                   </div>
                   <div class="github-link">
@@ -268,7 +290,7 @@
                       ><img
                         class="icon-link"
                         src="assets/images/github.png"
-                        alt=""
+                        alt="github"
                     /></a>
                   </div>
                 </div>
@@ -300,13 +322,21 @@
               <div class="tech-icons-container">
                 <div class="tech-icons-container-1">
                   <h4>Technologies:</h4>
-                  <img class="icon" src="assets/images/postgresql.png" alt="" />
+                  <img
+                    class="icon"
+                    src="assets/images/postgresql.png"
+                    alt="postgresql"
+                  />
                   <img
                     class="icon"
                     src="assets/images/express.png"
                     alt=""
-                  /><img class="icon" src="assets/images/react.png" alt="" />
-                  <img class="icon" src="assets/images/node.png" alt="" />
+                  /><img
+                    class="icon"
+                    src="assets/images/react.png"
+                    alt="react"
+                  />
+                  <img class="icon" src="assets/images/node.png" alt="node" />
                 </div>
                 <div class="tech-icons-container-2">
                   <div class="site-link">
@@ -315,7 +345,7 @@
                       ><img
                         class="icon-link"
                         src="assets/images/heroku.png"
-                        alt=""
+                        alt="heroku"
                     /></a>
                   </div>
                   <div class="github-link">
@@ -326,7 +356,7 @@
                       ><img
                         class="icon-link"
                         src="assets/images/github.png"
-                        alt=""
+                        alt="github"
                     /></a>
                   </div>
                 </div>
@@ -340,7 +370,7 @@
               id="fourth-project"
               class="project-image"
               src="assets/images/ConnectFour.png"
-              alt=""
+              alt="ConnectFour.png"
             />
 
             <div id="fourth-project-text" style="display: none">
@@ -357,11 +387,11 @@
               <div class="tech-icons-container">
                 <div class="tech-icons-container-1">
                   <h4>Technologies:</h4>
-                  <img class="icon" src="assets/images/html.png" alt="" />
-                  <img class="icon" src="assets/images/css.png" alt="" /><img
+                  <img class="icon" src="assets/images/html.png" alt="html" />
+                  <img class="icon" src="assets/images/css.png" alt="css" /><img
                     class="icon"
                     src="assets/images/javascript.png"
-                    alt=""
+                    alt="JavaScript"
                   />
                 </div>
                 <div class="tech-icons-container-2">
@@ -371,7 +401,7 @@
                       ><img
                         class="icon-link"
                         src="assets/images/surge.png"
-                        alt=""
+                        alt="surge"
                     /></a>
                   </div>
                   <div class="github-link">
@@ -382,7 +412,7 @@
                       ><img
                         class="icon-link"
                         src="assets/images/github.png"
-                        alt=""
+                        alt="github"
                     /></a>
                   </div>
                 </div>
@@ -396,19 +426,22 @@
     <footer id="footer-container">
       <p id="footer-text">Designed by therealmikenew</p>
       <a href="https://github.com/therealmikenew" target="_blank">
-        <img class="icon" src="assets/images/github.png" alt=""
+        <img class="icon" src="assets/images/github.png" alt="github"
       /></a>
       <a
         href="https://www.linkedin.com/in/therealmichaelnewman/"
         target="_blank"
       >
-        <img class="icon" src="assets/images/LI-In-Bug.png" alt=""
+        <img class="icon" src="assets/images/LI-In-Bug.png" alt="LinkedIn"
       /></a>
       <a
         href="https://docs.google.com/document/d/1ZTxtEj8I1d0g9trV6xLB_idF2VxdD80H2qiwwVZhrHA/edit?usp=sharing"
         target="_blank"
       >
-        <img class="icon" src="assets/images/Google_Drive_logo.png" alt=""
+        <img
+          class="icon"
+          src="assets/images/Google_Drive_logo.png"
+          alt="Google_Drive_logo"
       /></a>
     </footer>
     <script src="index.js"></script>
